daily batch aggregations are working. optional env variable can be set to specify where to start reading the data from the topic.
started efforts on the minute batching as well